acvus-mir-test/tests/snapshots/all__e2e__lambda_map_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   assign <template> = T0
     5 |   r3 = array_begin capacity=0
     6 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   assign x = r8
    12 |   r9 = ref &x
    13 |   r10 = call #4(r9)
    14 |   assign out = r10
    15 |   r11 = ref &out
    16 |   r12 = call #5(r11)
    17 |   r13 = ref &mut <template>
    18 |   append r13 r12
    19 |   r14 = take <template>
    20 |   commit @items = r4
    21 |   return r14

    ; r0 (v23) : Vec<i64>
    ; r1 (v24) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v7) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (into_iter(...)) : Items<i64>
    ; r6 (v11) : Fn(i64) -> i64
    ; r7 (map(...)) : Map<Items<i64>, i64, i64, Pure>
    ; r8 (collect(...)) : Vec<i64>
    ; r9 (x.) : &Vec<i64>
    ; r10 (len(...)) : u64
    ; r11 (out.) : &u64
    ; r12 (to_string(...)) : String
    ; r13 (<template>.) : &mut String
    ; r14 (v21) : String
    ; r15 (v22) : Vec<i64>
    ; r16 (v3) : String
    ; r17 (x) : Vec<i64>
    ; r18 (items) : Vec<i64>
    ; r19 (out) : u64
    ; r20 (items) : Vec<i64>
    ; r21 (@items) : Vec<i64>
    ; r22 (<template>) : String
    ; r23 (@items) : Vec<i64>

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 + 1 (r3)
     3 |   return r1

    ; r0 (v6) : i64
    ; r1 (v5) : i64
    ; r2 (v1) : i64
    ; r3 (v4) : i64
    ; r4 (i) : i64
    ; r5 (i) : i64
