acvus-mir-test/tests/snapshots/all__e2e__lambda_multiple_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @users
     4 |   assign <template> = T0
     5 |   r3 = array_begin capacity=0
     6 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   assign x = r8
    12 |   r9 = ref &x
    13 |   r10 = call #4(r9)
    14 |   assign out = r10
    15 |   r11 = ref &out
    16 |   r12 = call #5(r11)
    17 |   r13 = ref &mut <template>
    18 |   append r13 r12
    19 |   r14 = take <template>
    20 |   commit @users = r4
    21 |   return r14

    ; r0 (v23) : Vec<{age: i64, name: String}>
    ; r1 (v24) : Vec<{age: i64, name: String}>
    ; r2 (@users) : Vec<{age: i64, name: String}>
    ; r3 (v7) : Array<{age: i64, name: String}, 0>
    ; r4 (vec(...)) : Vec<{age: i64, name: String}>
    ; r5 (into_iter(...)) : Items<{age: i64, name: String}>
    ; r6 (v11) : Fn({age: i64, name: String}) -> (String, i64)
    ; r7 (map(...)) : Map<Items<{age: i64, name: String}>, {age: i64, name: String}, (String, i64), Pure>
    ; r8 (collect(...)) : Vec<(String, i64)>
    ; r9 (x.) : &Vec<(String, i64)>
    ; r10 (len(...)) : u64
    ; r11 (out.) : &u64
    ; r12 (to_string(...)) : String
    ; r13 (<template>.) : &mut String
    ; r14 (v21) : String
    ; r15 (v22) : Vec<{age: i64, name: String}>
    ; r16 (v3) : String
    ; r17 (x) : Vec<(String, i64)>
    ; r18 (users) : Vec<{age: i64, name: String}>
    ; r19 (out) : u64
    ; r20 (users) : Vec<{age: i64, name: String}>
    ; r21 (@users) : Vec<{age: i64, name: String}>
    ; r22 (<template>) : String
    ; r23 (@users) : Vec<{age: i64, name: String}>

=== closure L0 (ValueId(0)) ===
     0 |   assign u = r0
     1 |   r1 = take u.name
     2 |   r2 = take u.age
     3 |   r3 = tuple (r1, r2)
     4 |   return r3

    ; r0 (v1) : {age: i64, name: String}
    ; r1 (u.name) : String
    ; r2 (u.age) : i64
    ; r3 (v5) : (String, i64)
    ; r4 (u) : {age: i64, name: String}
