acvus-mir-test/tests/snapshots/all__e2e__lambda_not_param.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @flags
     4 |   assign <template> = T0
     5 |   r3 = list []
     6 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   assign x = r8
    12 |   r9 = ref &x
    13 |   r10 = call #4(r9)
    14 |   assign out = r10
    15 |   r11 = ref &out
    16 |   r12 = call #5(r11)
    17 |   r13 = ref &mut <template>
    18 |   append r13 r12
    19 |   r14 = take <template>
    20 |   commit @flags = r4
    21 |   return r14

    ; r0 (v23) : Vec<Bool>
    ; r1 (v24) : Vec<Bool>
    ; r2 (@flags) : Vec<Bool>
    ; r3 (v7) : Array<Bool, 0>
    ; r4 (vec(...)) : Vec<Bool>
    ; r5 (into_iter(...)) : Items<Bool>
    ; r6 (v11) : Fn(Bool) -> Bool
    ; r7 (map(...)) : Map<Items<Bool>, Bool, Bool, Pure>
    ; r8 (collect(...)) : Vec<Bool>
    ; r9 (x.) : &Vec<Bool>
    ; r10 (len(...)) : u64
    ; r11 (out.) : &u64
    ; r12 (to_string(...)) : String
    ; r13 (<template>.) : &mut String
    ; r14 (v21) : String
    ; r15 (v22) : Vec<Bool>
    ; r16 (v3) : String
    ; r17 (x) : Vec<Bool>
    ; r18 (flags) : Vec<Bool>
    ; r19 (out) : u64
    ; r20 (flags) : Vec<Bool>
    ; r21 (@flags) : Vec<Bool>
    ; r22 (<template>) : String
    ; r23 (@flags) : Vec<Bool>

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = !r2
     2 |   return r1

    ; r0 (v5) : Bool
    ; r1 (v4) : Bool
    ; r2 (v1) : Bool
    ; r3 (i) : Bool
    ; r4 (i) : Bool
