acvus-mir-test/tests/snapshots/all__e2e__list_literal_expression.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     1 |   assign <template> = T0
     2 |   r0 = array_begin capacity=3
     4 |   r1 = array_push r0 1 (r2)
     6 |   r3 = array_push r1 2 (r4)
     8 |   r5 = array_push r3 3 (r6)
     9 |   assign x = r5
    10 |   r7 = ref &x
    11 |   r8 = call #0(r7)
    12 |   assign out = r8
    13 |   r9 = ref &out
    14 |   r10 = call #1(r9)
    15 |   r11 = ref &mut <template>
    16 |   append r11 r10
    17 |   r12 = take <template>
    18 |   return r12

    ; r0 (v3) : Array<i64, 0>
    ; r1 (v5) : Array<i64, 1>
    ; r2 (v4) : i64
    ; r3 (v7) : Array<i64, 2>
    ; r4 (v6) : i64
    ; r5 (v9) : Array<i64, 3>
    ; r6 (v8) : i64
    ; r7 (x.) : &Array<i64, 3>
    ; r8 (len(...)) : u64
    ; r9 (out.) : &u64
    ; r10 (to_string(...)) : String
    ; r11 (<template>.) : &mut String
    ; r12 (v17) : String
    ; r13 (v1) : String
    ; r14 (x) : Array<i64, 3>
    ; r15 (<template>) : String
    ; r16 (out) : u64
