acvus-mir-test/tests/snapshots/all__e2e__match_binding_with_body.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = " is here\n"
  T2 = "no user\n"

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @user
     2 |   assign @user = r1
     4 |   assign <template> = T0
     5 |   jump L1
     6 | L1:
     8 |   if true (r2) -> L2 else L3 join L4
     9 | L2:
    11 |   jump L4(true (r3))
    12 | L3:
    14 |   jump L4(false (r4))
    15 | L4(r5: Bool):
    16 |   jump_if r5 then L5 else L6
    17 | L5:
    18 |   r6 = take @user.name
    19 |   r7 = ref &mut <template>
    20 |   r8 = string_clone r6
    21 |   append r7 r8
    22 |   r9 = const_str T1
    23 |   r10 = ref &mut <template>
    24 |   append r10 r9
    26 |   jump L0(() (r11), r6)
    27 | L6:
    28 |   r12 = const_str T2
    29 |   r13 = ref &mut <template>
    30 |   append r13 r12
    32 |   jump L0(() (r14), r0)
    33 | L0(r15: Unit, r16: String):
    34 |   r17 = take <template>
    35 |   r18 = take @user
    36 |   commit @user = r18
    37 |   return r17

    ; r0 (v22) : String
    ; r1 (@user) : {age: i64, email: String, name: String}
    ; r2 (v5) : Bool
    ; r3 (v7) : Bool
    ; r4 (v8) : Bool
    ; r5 (v6) : Bool
    ; r6 (name) : String
    ; r7 (<template>.) : &mut String
    ; r8 (v25) : String
    ; r9 (v13) : &str
    ; r10 (<template>.) : &mut String
    ; r11 (v15) : Unit
    ; r12 (v16) : &str
    ; r13 (<template>.) : &mut String
    ; r14 (v18) : Unit
    ; r15 (v19) : Unit
    ; r16 (v24) : String
    ; r17 (v20) : String
    ; r18 (v21) : {age: i64, email: String, name: String}
    ; r19 (name) : String
    ; r20 (v3) : String
    ; r21 (<template>) : String
    ; r22 (name) : String
    ; r23 (@user) : {age: i64, email: String, name: String}
    ; r24 (v23) : String
